--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Rumet
+application.vendor=Usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,20 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Rumet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.bcmail-jdk14-1.38.jar=lib/bcmail-jdk14-1.38.jar
+file.reference.bcprov-jdk14-1.38.jar=lib/bcprov-jdk14-1.38.jar
+file.reference.bctsp-jdk14-1.38.jar=lib/bctsp-jdk14-1.38.jar
+file.reference.itextpdf-5.0.6.jar=lib/itextpdf-5.0.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.bcmail-jdk14-1.38.jar}:\
+    ${file.reference.bcprov-jdk14-1.38.jar}:\
+    ${file.reference.bctsp-jdk14-1.38.jar}:\
+    ${file.reference.itextpdf-5.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
