--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,15 +32,21 @@ excludes=
 file.reference.bcmail-jdk14-1.38.jar=lib/bcmail-jdk14-1.38.jar
 file.reference.bcprov-jdk14-1.38.jar=lib/bcprov-jdk14-1.38.jar
 file.reference.bctsp-jdk14-1.38.jar=lib/bctsp-jdk14-1.38.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.fontbox-2.0.12.jar=lib/fontbox-2.0.12.jar
 file.reference.itextpdf-5.0.6.jar=lib/itextpdf-5.0.6.jar
+file.reference.pdfbox-2.0.12.jar=lib/pdfbox-2.0.12.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.bcmail-jdk14-1.38.jar}:\
     ${file.reference.bcprov-jdk14-1.38.jar}:\
     ${file.reference.bctsp-jdk14-1.38.jar}:\
-    ${file.reference.itextpdf-5.0.6.jar}
+    ${file.reference.itextpdf-5.0.6.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.pdfbox-2.0.12.jar}:\
+    ${file.reference.fontbox-2.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
