Improvements in windowboxOrderList and begining in database implementation

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.fontbox-2.0.12.jar=lib/fontbox-2.0.12.jar
 file.reference.itextpdf-5.0.6.jar=lib/itextpdf-5.0.6.jar
 file.reference.pdfbox-2.0.12.jar=lib/pdfbox-2.0.12.jar
+file.reference.sqlite-jdbc-3.23.1.jar=lib/sqlite-jdbc-3.23.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.itextpdf-5.0.6.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.pdfbox-2.0.12.jar}:\
-    ${file.reference.fontbox-2.0.12.jar}
+    ${file.reference.fontbox-2.0.12.jar}:\
+    ${file.reference.sqlite-jdbc-3.23.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
